--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:postgresql://localhost/conference-demo
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
