--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
